fix: try to fix monaco font visibility

--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -17,7 +17,7 @@
   src: url("../fonts/CourierCode-Italic.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Monaco';
+  font-family: 'ThisIsMonaco';
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Monaco.ttf") format("truetype");
